--- a/app/views/departments/_form.html.erb
+++ b/app/views/departments/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :organization %><br>
-    <%= f.text_field :organization %>
+    <%= f.label :organization_id %><br>
+    <%= f.text_field :organization_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
