--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= department.name %></td>
         <td><%= department.organization %></td>
-        <td><%= link_to 'Show', department %></td>
-        <td><%= link_to 'Edit', edit_department_path(department) %></td>
-        <td><%= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%#= link_to 'Show', department %></td>
+        <td><%#= link_to 'Edit', edit_department_path(department) %></td>
+        <td><%#= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Department', new_department_path %>
+<%= link_to 'New Department', new_organization_department_path %>
