--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -7,3 +7,13 @@
 
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
 <%= link_to 'Back', organizations_path %>
+
+<h2>Departments</h2>
+<ul>
+  <% @organization.departments.each do |dept| %>
+    <li><%= link_to dept.name, organization_department_path(@organization, dept)  %></li>
+  <%end%>
+</ul>
+<p>
+  <%= link_to 'New Department', new_organization_department_path(@organization) %>
+</p>
